<resources>
    <string name="app_name">Puzzle_game_arwa_shamaly</string>
    <string name="btn_start_play">Start playing</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_log_out">LogOut</string>
    <string name="tv_music">Music</string>
    <string name="tv_notifications">Notifications</string>
    <string name="tv_replay">Replay</string>
    <string name="tvSettingTitle">Setting</string>
    <string name="tvProfile">View Profile</string>
    <string name="tvUserName">Username :</string>
    <string name="tvEmail">Email :</string>
    <string name="tvGender">Gender :</string>
    <string name="tvBirthdate">Birthdate :</string>
    <string name="tvCountry">Country :</string>
    <string name="tvCompletedLevels">Completed Levels :</string>
    <string name="tvAnswerQ">Questions answered :</string>
    <string name="tvCorrectAnswer">Correct Answer :</string>
    <string name="tvWrongAnswer">Wrong Answer :</string>
    <string name="tvProfileTitle">Profile</string>

    <string name="userNameHint">enter your username</string>
    <string name="EmailHint">enter your email</string>
    <string name="rbMale">Male</string>
    <string name="rbFemale">Female</string>
    <string name="tvNextQ">Next</string>


    <string name="tvLevelNumber">Level</string>
    <string name="etCompleteAnswerHint">Write the answer here</string>
    <string name="btnSure">I\'m sure</string>
    <string name="tvCorrectAnswerDialog">Correct Answer</string>
    <string name="tvWrongAnswerDialog">Wrong Answer</string>

    <string name="skipTitleDialog">Skip the question ?</string>
    <string name="skipMessageDialog">3 points will be deducted for moving to the
        second question when you click on yes.</string>

    <string name="replayTitleDialog">Replay</string>
    <string name="replayMessageDialog">All levels will be replayed from the beginning,
        and you will lose your points when you press Yes.</string>

    <string name="positiveButtonDialog">Yes</string>
    <string name="negativeButtonDialog">No</string>


    <string-array name="country">
        <item>Palestine</item>
        <item>Ukraine</item>
        <item>Denmark</item>
        <item>France</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Egypt</item>
        <item>Sudan</item>
        <item>Saudi Arabia</item>
        <item>Emirates</item>
        <item>syria</item>
        <item>Jordan</item>
        <item>Iraq</item>
        <item>morocco</item>
        <item>Lebanon</item>
        <item>Australia</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>China</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>