<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activities.SettingScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/btn_shape"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingTitle">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:text="@string/tvProfile"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_21ssp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/musicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMusic"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_music_on" />

            <TextView
                android:id="@+id/tvMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:text="@string/tv_music"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_21ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgNotifications"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_notifications_active" />

            <TextView
                android:id="@+id/tvNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:text="@string/tv_notifications"
                android:textColor="@color/black"
                android:textSize="@dimen/_21ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_replay"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/tvSettingTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>