<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activities.HomeScreen">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartPlay"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_shape"
        android:text="@string/btn_start_play"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_21ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetting"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_shape"
        android:text="@string/btn_setting"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_21ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartPlay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_shape"
        android:text="@string/btn_log_out"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_21ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_190sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogOut"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>